[package]
name = "play_count_dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# debug-macros = ["trace_macros"]

[dependencies]
chrono = "0.4.26"
fst = "0.4.7"
memmap2 = "0.7.1"
rkyv = { version = "0.7.42", default-features = false, features = [
    "alloc",
    "hashbrown",
    "size_64",
    "std",
] }
paste = "1.0.14"
rand = { version = "0.8.5", features = ["small_rng"] }
walkdir = "2.4.0"
rayon = "1.7.0"
crossbeam = "0.8.2"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
parking_lot_core = { version = "0.9.8", features = ["deadlock_detection"] }
